fix(mobile): Toggle Button - fixed wrong position [OAPTAU-383]
 - moved one selector from style.css to listview.less (ui-toggle-container)
 - deleted selector with wrong position properties from groupindex.less
 - changed right margin of toggle container from 8.5px do 16px according to ux guide
 - found bug: other buttons at static list style have wrong margin according to ux guide

--- a/tau/demos/SDK/mobile/UIComponents/css/style.css
+++ b/tau/demos/SDK/mobile/UIComponents/css/style.css
@@ -177,20 +177,6 @@
 .li-has-radio.li-has-right-radio .ui-radio {
 	margin-top: -20px;
 }
-
-/**************** right toggle switch ************/
-.li-has-right-btn .ui-toggle-container {
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	right: 16px;
-	left: auto;
-}
-
-.li-has-right-btn .ui-toggle-container:first-child {
-	right: 60px;
-}
-
 /****************************************************************/
 /*              Multiline List Style                            */
 /****************************************************************/
