--- a/tau/src/css/profile/mobile/changeable/common/groupindex.less
+++ b/tau/src/css/profile/mobile/changeable/common/groupindex.less
@@ -20,12 +20,5 @@
 
     }
 
-    ~ .ui-li-static {
-        input[type=checkbox] {
-            position: absolute;
-            right: 32 * @unit_base;
-            top: 32 * @unit_base;
-        }
-    }
 }
 
